# python-batch-sample

./: .gitignore  batch.py  docker-compose.yml  game_result.py  game_title.py  main.py  pyproject.toml
entity/: game_result.py
infra/dynamodb/: dynamodb_driver.py  game_result_driver.py
processor/: game_result_processor.py  processor.py
reader/: game_result_reader.py  reader.py
repository/: game_result_repository.py
src/: batch.py  game_result.py  game_title.py  main.py
src/entity/: game_result.py
src/infra/dynamodb/: dynamodb_driver.py  game_result_driver.py
src/processor/: game_result_processor.py  processor.py
src/reader/: game_result_reader.py  reader.py
src/repository/: game_result_repository.py
src/writer/: game_result_writer.py  writer.py
tests/reader/: test_game_result_reader.py
writer/: game_result_writer.py  writer.py
